added GET for results, that shows results by discipline, sorted by time/distance + optional filtering on gender and age